# devpack

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  go.mod  go.sum  install.sh  mise.toml  package.json
.github/workflows/: ci.yml  release.yml  run_tests.yml
buildkit/: build.go  convert.go  frontend.go  platform.go  platform_test.go
buildkit/build_llb/: build_graph.go  layers.go  layers_test.go
cli/: build.go  common.go  common_test.go  dev_config.go  dev_config_test.go  plan.go  prepare.go
cmd/cli/: main.go
core/: core.go  core_test.go  prettyPrint.go  validate.go  validate_test.go
core/__snapshots__/: TestGenerateBuildPlanForExamples_config-file_1.snap.json  TestGenerateBuildPlanForExamples_deno-2_1.snap.json  TestGenerateBuildPlanForExamples_dockerignore_1.snap.json  TestGenerateBuildPlanForExamples_dotnet-api_1.snap.json  TestGenerateBuildPlanForExamples_dotnet-cli_1.snap.json  TestGenerateBuildPlanForExamples_elixir-ecto_1.snap.json  TestGenerateBuildPlanForExamples_elixir-phoenix_1.snap.json  TestGenerateBuildPlanForExamples_go-cmd-dirs_1.snap.json  TestGenerateBuildPlanForExamples_go-mod_1.snap.json  TestGenerateBuildPlanForExamples_go-workspaces_1.snap.json  (+71 more)
core/app/: app.go  (+2 more)
docs/: Caddyfile  astro.config.mjs  package.json
examples/python-uv-packaged/: pyproject.toml  railpack.json  test.json
examples/python-uv-packaged/src/python_uv_packaged/: __init__.py
examples/python-uv-workspace/workspace-package/: pyproject.toml
examples/python-uv-workspace/workspace-package/src/workspace_package/: __init__.py
integration_tests/: run_test.go
(+209 files in other folders)
